# togaf-agent

./: .env.example  .gitignore  README.md  data  pyproject.toml  streamlit_app.py
knowledge_base/chroma_db/: chroma.sqlite3
knowledge_base/embeddings/: embedding_cache.json
scripts/data_processing/: analyze_toc.py  extract_toc.py  foundation_toc.json  practitioner_toc.json  toc_analysis.json
scripts/deployment/: main.py  start_system.py
scripts/development/: validate_phase1.py  validate_phase2.py
togaf_agent/: __init__.py
togaf_agent/api/: __init__.py  main.py
togaf_agent/conversation/: __init__.py  adaptive_agent.py  session_manager.py
togaf_agent/core/: __init__.py  togaf_tutor.py
togaf_agent/knowledge_base/: __init__.py  content_chunker.py  embedding_generator.py  metadata_schema.py  pdf_processor.py  semantic_search.py  togaf_content_map.py  vector_store.py
togaf_agent/ui/: __init__.py  main.py
togaf_agent/user_management/: __init__.py  onboarding.py  progress_tracker.py  user_profile.py
togaf_agent/utils/: __init__.py  config.py  openai_client.py
user_data/analytics/: 26d2d932-03a7-45db-a9f3-074556c38948_analytics.json  745b7a19-5b9b-4a76-8664-da9c02bed956_analytics.json  bf71216b-26e1-494a-9d39-57c8e772ef7d_analytics.json
user_data/conversation_sessions/: 2c7236a5-2e4c-4fa8-aaf0-744439896e97.json  580f754e-d106-4ec0-bb6c-19eaa9a39ef4.json  61260250-9801-45fb-9269-f0e046923c30.json  7cc467b4-1f76-4c4f-b645-186a2026202e.json
user_data/user_profiles/: 26d2d932-03a7-45db-a9f3-074556c38948.json  745b7a19-5b9b-4a76-8664-da9c02bed956.json
(+12 files in other folders)
